--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -1,10 +1,193 @@
 % !TeX spellcheck = en_GB
 
-\section{Architecture}\label{sec:architecture}
+\section{Specification}\label{sec:specification}
+
+\subsection{Overview}
+Figure \ref{fig:architecture-overview} presents an overview over the Redbackup system. All actors, components and interactions are described in the following sections.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{resources/architecture_overview}
+    \caption{Redbackup system overview}
+    \label{fig:architecture-overview}
+\end{figure}
+
+\subsection{Actors}
+
+\subsubsection{User}
+A typical \emph{User} does not want to interact with the system at any time. All he/she wants is to be sure that all his/her data is safely backed up.
+
+The following simplifications concering the \emph{User} apply for the study project:
+
+\begin{itemize}
+	\item the \emph{User} must instruct the \emph{Client} manually
+	\item There is no concept of authentication yet
+\end{itemize}
+
+\paragraph{Responsibilities}
+\begin{itemize}
+	\item Instruct the \emph{Client} to create a Backup
+	\item Instruct the \emph{Client} to restore a Backup
+\end{itemize}
+
+
+\subsubsection{Administrator}
+An \emph{Administrator} wants to interact with the system as less as possible. He wants to be sure that the system runs smoothly. If something goes wrong, he wants to be able to fix it within a few minutes.
+
+\paragraph{Responsibilities}
+\begin{itemize}
+	\item Instruct to the \emph{Management} to add/remove \emph{Nodes} from the System
+	\item Ensure that the \emph{Management} runs properly (i.g. monitor it)
+	\item Act if the \emph{Management} notifies him/her about any anomalies
+\end{itemize}
+
+\subsection{Components}
+
+\subsubsection{Client}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{resources/client_domain_model}
+    \caption[Client Domain Model]{Domain Model illustrating the \emph{Client}s perspective}
+\end{figure}
+
+The \emph{Client} knows the \emph{Management} by configuration.
+
+The \emph{Client} queries the \emph{Management} for a list of \emph{Node}s, to which he can send backups or restore previous backups. He caches the results in its \emph{Node Cache}.
+
+The \emph{Chunk Index} hierarchically models the file system. This structure might change in the future when supporting symlinks and permissions \footnote{See \url{https://borgbackup.readthedocs.io/en/stable/internals/data-structures.html}}.
+
+The relationship between a given \emph{File} and its \emph{Chunk}s is essential. The \emph{Client} splits a \emph{File} into multiple \emph{Chunks} (using a rolling hash) to speed up the backup of large data. During the study project, a \emph{File} consists of one \emph{Chunk}.
+A \emph{Chunk} is identified by its \emph{Chunk Identifier}, which can be calculated using a hash function which takes the \emph{Chunk}s contents as input.
+The contents of the \emph{Chunk} do not have be present on the \emph{Client}. During backup, the \emph{Client} can calculate the \emph{Chunks} from the \emph{Files} on the disk. On Restore, the \emph{Client} fetches the contents of the \emph{Chunks} from a \emph{Node} and reassembles the \emph{File} based on the \emph{Chunk Index}.
+
+% TODO: Serialized Metadata = Serialized version of a given Chunk Index.
+
+\paragraph{Responsibilities}
+
+
+\begin{itemize}
+	\item Keeping the \emph{Node Cache} up to date
+	\item Create Backups (See Scenario \ref{sec:scenario-create-backup}: \nameref{sec:scenario-create-backup})
+	\begin{itemize}
+		\item Building/Calculating the \emph{Chunk Index}
+		\item Serialize the \emph{Chunk Index}
+		\item Send \emph{Chunk}s to \emph{Node}s
+		\item Mark \emph{Chunk}s as \emph{Root Handle}s
+	\end{itemize}
+	\item Restore Backups (See Scenario \ref{sec:scenario-backup-restore}: \nameref{sec:scenario-backup-restore})
+	\begin{itemize}
+		\item Fetch \emph{Root Handle}s from \emph{Node}s
+		\item Fetch \emph{Chunk}s from \emph{Nodes}
+		\item Deserialize \emph{Chunk Index}s
+		\item Reassemble \emph{Chunks} into \emph{File}s
+		\item Let the \emph{User} choose which \emph{File}s from which \emph{Chunk Index} shall be restored.
+	\end{itemize}
+\end{itemize}
+
+\subsubsection{Node}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{resources/node_domain_model}
+    \caption[Node Domain Model]{Domain Model illustrating the \emph{Node}s perspective}
+\end{figure}
+
+A \emph{Node} is identified by its unique \emph{Node Identifier}. It listens on a certain \emph{Address} and \emph{Port}. A \emph{Node} is also associated with a \emph{Location} which will be a replication criteria in the future.
+
+A \emph{Node} knows the \emph{Management} by configuration and exchanges data with it on a regular basis.
+
+A \emph{Node} is in a given \emph{State} and acts differently depending on it (See Figure \ref{fig:node-states}). A \emph{Node} knows all other \emph{Nodes}s in the System and maintains a \emph{State} for them as well.
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{resources/node_state}
+    \caption[Node States]{A UML State Diagram describing the \emph{States} of a \emph{Node}}
+    \label{fig:node-states}
+\end{figure}
+
+\begin{itemize}
+	\item \emph{uninitialized}: The \emph{Node} queries the \emph{Management} for initialization and does nothing else.
+	\item \emph{active}: This is the "normal" state in which a \emph{Node} accepts backups, performs replication and sends requested data.
+	\item \emph{unreachable}: A \emph{Node} is marked as \emph{unreachable} if any other \emph{Node} or the \emph{Management} can not reach it. A node never sees itself in this state.
+	\item  \emph{leaving soon}: The \emph{Node} does not answer any requests and ensures that all its data is replicated. When it is done, it automatically switches into the \emph{left} state.
+	\item \emph{left}: The node has nothing to do in this state and can shut down.
+\end{itemize}
+
+The effective contens of a \emph{Chunk} are stored in a \emph{Storage}. See \ref{sec:component-storage} Component Storage for further details.
+
+The metadata about which \emph{Chunks} are stored on the \emph{Node} as well as their \emph{Expiration Date} and the information weather a \emph{Chunk} is a \emph{Root Handle} is stored in the \emph{Chunk Table}.
+
+\paragraph{Responsibilities}
+
+\begin{itemize}
+	\item Send Metadata periodically in order to ...
+	\begin{itemize}
+		\item Perform initialization
+		\item Learning about other \emph{Nodes}
+		\item Start the \emph{leaving} process and notify the \emph{Management} when it is completed
+		\item Send Metadata to the \emph{Management} so that it can perform health-checks (e.g. Verify the Timestamp)
+	\end{itemize}
+	\item Maintain the \emph{Chunk Table} (via backup and replication)
+	\begin{itemize}
+		\item Update \emph{Expiration Date}s
+		\item Add new \emph{Chunks}
+		\item Remove expired \emph{Chunks}
+	\end{itemize}
+	\item Handle possible \emph{Storagep} issues (See Scenario \ref{sec:scenario-storage-errors} \nameref{sec:scenario-storage-errors})
+	\item reply to \emph{Backup Requests}  (Scenario \ref{sec:scenario-create-backup} \nameref{sec:scenario-create-backup}) , \emph{client list root handles} (Scenario \ref{sec:scenario-backup-restore} \nameref{sec:scenario-backup-restore}) and \emph{fetch chunk}s requests
+	\item Replicate Data (See Scenario \ref{sec:scenario-data-replication} \nameref{sec:scenario-data-replication})
+	\item Handle Leaving Process (See Scenario \ref{sec:scenario-node-leave-planned} \nameref{sec:scenario-node-leave-planned})
+\end{itemize}
+
+\label{sec:component-storage}
+\subsubsection{Storage}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=1\linewidth]{resources/storage_domain_model}
+	\caption[Storage Domain Model]{Domain Model illustrating the \emph{Storage}s perspective}
+\end{figure}
+
+The main purpose of a \emph{Storage} component is to manage \emph{Chunk}s.
+A \emph{Storage} is associated with one \emph{Node} which stores, loads and deletes \emph{Chunk Contents} by its \emph{Chunk Identifier} on the \emph{Storage}. The same \emph{Node} is notified by the \emph{Storage} e.g. when corrupted data is detected.
+
+A \emph{Chunk} should also monitor the \emph{Disk}s, on which the \emph{Chunk Contents} are stored, for possible issues and report them to the \emph{Node}. This feature, however, is not implemented in the study project.
+
+\paragraph{Responsibilities}
+
+\begin{itemize}
+	\item store \emph{Chunk Contens}
+	\item load and return \emph{Chunk Contens} by its \emph{Chunk Identifier}
+	\item delete\emph{Chunk Contens} by its \emph{Chunk Identifier}
+	\item detect possible corruption of \emph{Chunk Contents}
+	\item perform integrity tests on the \emph{Disk}s (e.g. S.M.A.R.T tests)
+	\item Notify the \emph{Node} when a corruption / integrity problem occur
+\end{itemize}
+
+\subsubsection{Management}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.75\linewidth]{resources/management_domain_model}
+    \caption[Management Domain Model]{Domain Model illustrating the \emph{Management}s perspective}
+\end{figure}
+
+The \emph{Administrator} is the only Actor interacting with the \emph{Management}. He/She sends instructions (e.g. add new node) and is notified by the \emph{Management} about any anomalies.
+\emph{Clients} fetch a list of all \emph{Nodes} from the \emph{Management} (See Client Component for furhter Details). As for now, the \emph{Management} does not know anything about \emph{Client}s, but this might change when authentication is implemented in the future.
+The \emph{Management} maintains \emph{Metadata} for each \emph{Node} in the System and sends that information every \emph{Node} when they post their \emph{Metadata}.
+
+\paragraph{Responsibilities}
+\begin{itemize}
+	\item Add and remove \emph{Nodes}
+	\item Notify the \emph{Administrator} e.g. if a \emph{Node} leaves unexpectedly.
+	\item Receive \emph{Metadata} from the \emph{Nodes} and reply with \emph{Metadata}
+	\item Send list of \emph{Nodes} to the \emph{Client}s
+\end{itemize}
 
 \subsection{Scenarios}
 \label{sec:scenarios}
-This document describes various scenarios of system usage and possible failures.
+This section describes various scenarios of system usage and possible failures.
 
 In the sequence diagrams, we use the composition of the minimal integration test, detailed in Figure \ref{fig:integrationtestsmall} (Chapter \ref{integration-tests}). The client backups its data to Node A only.
 
