--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -431,3 +431,48 @@ See first case in scenario~\fullref{sec:scenario-network-errors}
 
 \paragraph{Behaviour in case nodes have different states of management information}
 The redundancy is temporary reduced to the \glspl{node} which the group of old \glspl{node} know, but will eventually be resolved as \glspl{node} fetch \gls{metadata}.
+
+\subsection{Messages}
+
+\emph{Messages} denote the communication units, which are transported over the network.
+
+\subsubsection{target nodes}
+\paragraph{get target nodes}
+\paragraph{return target nodes}
+RETURN: sorting based on managment configuration: hostnames; ipaddresses
+
+\subsubsection{designation}
+\paragraph{get designation}
+GET: estimate size; identification; how long data stored
+\paragraph{return designation}
+ RETURN: agree; not agree (reason)
+
+\subsubsection{chunk states}
+\paragraph{get chunk states}
+\paragraph{return chunk states}
+RETURN: chunk identifiers; keep date; stored (boolean); chunk handle state(boolean)
+
+\subsubsection{chunks}
+\paragraph{post chunks}
+POST: chunk identifier; chunk data; how long data stored; root handle state
+\paragraph{acknowledge chunks}
+ACK: chunk identifier; stored(boolean)
+
+\paragraph{get chunks}
+GET: chunk identifier
+\paragraph{return chunks}
+RETURN: chunk identifier, chunk data; root handle state
+
+\subsubsection{root handles}
+\paragraph{get root handles}
+GET: userid
+\paragraph{return root handles}
+RETURN: chunk identifier; chunk data
+
+\subsubsection{nodes metadata}
+\paragraph{get nodes metadata}
+\paragraph{post nodes metadata}
+POST: current local node metadata(identifier; state; redundancy status; free storage; capacity); current "neightbour" status(identifier;state)
+\paragraph{return nodes metadata}
+RETURN list of (node name; node ip; node state; node free storage)
+
