Improve components section

--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -13,8 +13,8 @@ All he/she wants is to be sure that all his/her data is safely backed
 up.
 
 An \emph{Administrator} wants to interact with the system as less as possible.
-He wants to be sure that the system runs smoothly. If something goes
-wrong, he wants to be able to fix it within a few minutes.
+He/She wants to be sure that the system runs smoothly. If something goes
+wrong, he/she wants to be able to fix it within a few minutes.
 
 
 The requirements are defined in the following sections in the form of user stories.
