Add Glossar + minor improvements

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -18,6 +18,7 @@
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \input{../latex_template}
+\loadglsentries{glossar}
 
 \begin{document}
 
@@ -175,7 +176,8 @@ We would like to thank our advisor, Prof.Dr. Farhad Mehta, for his continuous su
 
 %\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
 %\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
-
+\printglossary
+\glsaddall
 \end{abbreviations}
 
 
