--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -186,10 +186,11 @@ An \emph{Administrator} wants to interact with the system as less as possible. H
 \label{sec:scenarios}
 This section describes various scenarios of system usage and possible failures.
 
-In the sequence diagrams, we use the composition of the minimal integration test, detailed in Figure \ref{fig:integrationtestsmall} (Chapter \ref{integration-tests}). The client backups its data to Node A only.
+In the sequence diagrams, we use the composition of the minimal integration test, detailed in Figure \ref{fig:integrationtestsmall} (Chapter \ref{integration-tests}).
+The \gls{client} sends its data to \Gls{node} A only.
 
 \subsubsection{Create Backup}\label{sec:scenario-create-backup}
-The client wants to create a backup.
+The \gls{client} wants to create a backup.
 
 \begin{figure}[h]
     \centering
@@ -199,48 +200,48 @@ The client wants to create a backup.
 \end{figure}
 
 \begin{enumerate}
-    \item Client asks the management for a list of \emph{node}s. The \emph{management} returns a sorted list of all nodes (message: \emph{get target nodes}) (sorting might be based on specific configuration).
+    \item The \gls{client} asks the \gls{management} for a list of \glspl{node}. The \gls{management} returns a sorted list of all \Glspl{node} (message: \emph{get target nodes}) (sorting might be based on specific configuration).
         \begin{itemize}
-            \item If the management is down and this is a first time backup, client records message and aborts.
-            \item If the management is down, client tries the same host configuration as last time.
+            \item If the \gls{management} is down and this is a first time backup, the \gls{client} records a message and aborts.
+            \item If the \gls{management} is down, \gls{client} tries the same \glspl{node} as last time.
         \end{itemize}
-    \item Client tries to contact nodes in the presorted order.
+    \item The \gls{client} tries to contact \glspl{node} in the presorted order.
         \begin{enumerate}
-            \item The client sends a backup request (message: \emph{get designation}.
-            \item The node acknowledges or denies the backup request.
-            \item If the node acknowledges, it is declared as \emph{designated node}
-            \item If the node denies the backup request, try next node.
-            \item If no node answers the request, client records an error message and aborts.
+            \item The \gls{client} sends a backup request (message: \emph{get designation}).
+            \item The \gls{node} acknowledges or denies the backup request (message: \emph{return designation}).
+            \item If the \gls{node} acknowledges, it is declared as \gls{designated-node}.
+            \item If the \gls{node} denies the backup request, the \gls{client} tries the next \gls{node}.
+            \item If no \gls{node} answers the request, the \gls{client} records an error message and aborts.
        \end{enumerate}
-   \item If the contact was established, the client starts creating a backup.
+   \item If the backup request was successful, the \gls{client} starts creating a backup.
         \begin{enumerate}
-            \item Split all files that changed since the last backup into \emph{chunk}s\footnote{using a rolling hash, see \url{https://borgbackup.readthedocs.io/en/stable/internals/data-structures.html\#chunks}} and calculate a corresponding hash, the \emph{chunk identifier} and add it to the local \emph{chunk index}.
-            \item Files that have not changed since the last backup, must already be present in the chunk index.
-            \item Send all chunk identifiers present in the chunk index combined with an \emph{expiration date} to the designated node. (message: \emph{get chunk states})
-            \item The designated node checks, if all chunks received from the client chunk list are present on the node.
+            \item The \gls{client} splits all \glspl{file} that changed since the last backup into \glspl{chunk-content}\footnote{using a rolling hash, see \url{https://borgbackup.readthedocs.io/en/stable/internals/data-structures.html\#chunks}} and calculate a corresponding hash, the \gls{chunk-identifier} and add it to the local \gls{chunk-index}.
+            \item \Glspl{file} that have not changed since the last backup, are already be present in the \gls{chunk-index}.
+            \item The \gls{client} send all \glspl{chunk-identifier} present in the \gls{chunk-index} combined with an \gls{expiration-date} to the \gls{designated-node}. (message: \emph{get chunk states})
+            \item The \gls{designated-node} checks, if all \glspl{chunk-identifier} received from the \gls{client} are present in its \gls{chunk-table}.
                 \begin{itemize}
-                    \item If a chunk is already present, update its expiration date if it is further in the future.
-                    \item If a chunk is not present, request it from the client (see message response \emph{return chunk states} for further details)
+                    \item If a \gls{chunk-identifier} is already present on the \gls{designated-node}, update its \gls{expiration-date} if it is further in the future.
+                    \item If a \gls{chunk-identifier} is not present on the \gls{designated-node}, request it from the \gls{client} (see message response \emph{return chunk states} for further details)
                 \end{itemize}
-            \item The client sends the requested chunks to the designated node with a \emph{post chunks} message. %TODO: Abschluss client transaktion (root handle)
+            \item The \gls{client} sends the requested \glspl{chunk-content} to the \gls{designated-node} with a \emph{post chunks} message. %TODO: Abschluss client transaktion (root handle)
                 \begin{enumerate}
-                    \item The designated node verifies and persists the chunk into its \emph{storage}. Afterwards, it acknowledges receipt to the client (see \emph{acknowledge chunks} response message).
+                    \item The \gls{designated-node} verifies and persists the \glspl{chunk-content} into its \gls{storage}. Afterwards, it acknowledges receipt to the \gls{client} (see \emph{acknowledge chunks} response message).
                                    %TODO: Client must remember, which chunks have been acknowledged. This could be done with a sliding window for QoS/memory usage?
-                    \item The designated node replicates chunks in a continuous replication process. (See scenario~\ref{sec:scenario-data-replication})
+                    \item The \gls{designated-node} replicates \gls{chunk-content} and their \gls{expiration-date} in a continuous replication process. (See scenario~\ref{sec:scenario-data-replication})
                 \end{enumerate}
-            \item The client creates a \emph{serialised metadata chunks}. %TODO: Serialised Metadata is the chunk index plus backup metadata as linked list
-            \item The client sends the additional chunks (as \emph{post chunks} messages) to the designated node, in which the \emph{root handle} is highlighted. %TODO: The root handle holds a reference to the first list chunk as well as owner etc. information.
+            \item The \gls{client} serializes its \gls{chunk-index} into a \gls{serialised-chunk-index} and splits it into \glspl{chunk} as well. %TODO: Serialised Metadata is the chunk index plus backup metadata as linked list
+            \item The \gls{client} sends the additional \glspl{chunk-content} (as \emph{post chunks} messages) to the \gls{designated-node}, in which the \gls{root-handle} is highlighted. %TODO: The root handle holds a reference to the first list chunk as well as owner etc. information.
         \end{enumerate}
 \end{enumerate}
 
 \paragraph{Special cases}
 \begin{itemize}
-    \item If a client is suspended while running, it continuous with the backup process on resume. %TODO: If the expiration date is in the past, the node should refuse the chunk.
-    \item If a file is changed while the backup is running, and the chunk cannot be created, the backup must be restarted. %TODO: This may lead to starvation.
-    \item If client crashes, the backup is aborted and won't be continued if the client is restarted.
-    \item If the node goes away (disconnects/crashes/shuts down) during the backup, the client tries to resume the process. After a certain time (e.g. 15m), the client gives up and restarts the backup process from the beginning.
-    \item The node must reject (i.e.\ not acknowledge) a chunk, if the creation date is more than e.g.\ an hour in the future or past to prevent data loss on bad synchronized clocks.
-    \item If the node runs out of storage capacity, it does reject further data chunks. After a timeout, the client restarts the backup process (with another designated node).
+    \item If the \gls{client} is suspended while running, it continuous with the backup process on resume. %TODO: If the expiration date is in the past, the node should refuse the chunk.
+    \item If a \gls{file} is changed during the backup process, and the \glspl{chunk-content} and \glspl{chunk-identifier} cannot be calculated, the backup process must be restarted. %TODO: This may lead to starvation.
+    \item If \gls{client} crashes, the backup is aborted and won't be continued if the \gls{client} is restarted.
+    \item If the \gls{designated-node} goes away (disconnects/crashes/shuts down) during the backup process, the \gls{client} tries to resume the process. After a certain time (e.g. 15m), the \gls{client} gives up and restarts the backup process from the beginning.
+    \item A \gls{node} must reject (i.e.\ not acknowledge) \glspl{chunk-content}, if the creation date is more than e.g.\ an hour in the future or past to prevent data loss on bad synchronized clocks.
+    \item If the \gls{designated-node} runs out of storage capacity, it does reject further \glspl{chunk-content}. After a timeout, the client restarts the backup process (with another designated node).
 \end{itemize}
 
 \paragraph{Possible simplifications in this study project}
